--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -12,13 +11,8 @@ html {
 
 body {
   min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   overflow-x: hidden;
 }
 
@@ -35,46 +29,26 @@ body {
 }
 
 .title-wrapp {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .my {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .my__wrapp {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
 }
-
 .my__photo {
   max-width: 120px;
 }
-
 .my__name {
   font-size: 2rem;
 }
-
 .my__profession {
   font-size: 1.5rem;
 }
@@ -84,46 +58,28 @@ body {
   right: 0;
   left: 0;
   top: 200px;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  transform: translateX(100%);
   background-color: rgba(255, 255, 255, 0);
   width: 100%;
-  -webkit-transition: .5s;
-  transition: .5s;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  transition: 0.5s;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   z-index: 50;
 }
-
 .nav__links {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: absolute;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 50%;
-  background-color: #521a55;
+  background-color: rgb(82, 26, 85);
   padding-top: 20px;
 }
-
 .nav__links li {
   list-style: none;
   margin-bottom: 20px;
 }
-
 .nav__links li a {
   font-size: 1.5rem;
   text-decoration: none;
@@ -133,19 +89,15 @@ body {
 .burger {
   position: absolute;
   display: none;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   width: 30px;
   right: 0;
   top: 30px;
   height: 22px;
   margin-right: 43px;
   cursor: pointer;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
-
 .burger__span {
   background-color: #fff;
   width: 100%;
@@ -153,7 +105,7 @@ body {
 }
 
 .burger::after, .burger::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 2px;
@@ -171,13 +123,10 @@ body {
 .main {
   background-color: aliceblue;
 }
-
 .main__wrapp {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 2fr 3fr 1.5fr;
-      grid-template-columns: 2fr 2fr 3fr 1.5fr;
-      grid-template-areas: 'skil cont abo hob' 'skil pro edu lang';
+  grid-template-columns: 2fr 2fr 3fr 1.5fr;
+  grid-template-areas: "skil cont abo hob" "skil pro edu lang";
   row-gap: 20px;
   margin: auto;
   height: 100%;
@@ -187,16 +136,9 @@ section {
   position: relative;
   z-index: 5;
   background-color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   padding: 5px;
 }
 
@@ -206,44 +148,29 @@ section {
 }
 
 .contacts {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
   grid-area: cont;
 }
-
 .contacts__list {
   font-size: 1.1rem;
 }
-
 .contacts__list li {
   list-style: none;
   margin-bottom: 15px;
 }
 
 .about {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
   grid-area: abo;
   padding: 0 20px;
 }
-
 .skills {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
   grid-area: skil;
   margin-right: 20px;
 }
-
 .skills__list li {
   list-style: none;
   margin-bottom: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .icon-logo {
@@ -253,29 +180,26 @@ section {
 }
 
 .hobby {
-  -ms-grid-row: 1;
-  -ms-grid-column: 4;
   grid-area: hob;
 }
-
 .active__rest li {
   margin-left: 20px;
 }
 
 .projects {
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
   grid-area: pro;
 }
-
 .project-li {
   list-style: none;
   margin-bottom: 10px;
 }
-
 .project-li a {
   text-decoration: none;
-  color: #727272;
+  color: rgb(114, 114, 114);
+}
+
+.project-li-text {
+  color: #edc2c2;
 }
 
 .project-li > a:hover {
@@ -283,22 +207,18 @@ section {
 }
 
 .project-li > a:visited {
-  color: #736877;
+  color: rgb(115, 104, 119);
 }
 
 .education {
-  -ms-grid-row: 2;
-  -ms-grid-column: 3;
   grid-area: edu;
 }
-
 .education p {
   margin-bottom: 10px;
 }
-
 .education__certificate {
   text-decoration: none;
-  color: #727272;
+  color: rgb(114, 114, 114);
 }
 
 .education__certificate:hover {
@@ -306,15 +226,12 @@ section {
 }
 
 .education__certificate:visited {
-  color: #736877;
+  color: rgb(115, 104, 119);
 }
 
 .languages {
-  -ms-grid-row: 2;
-  -ms-grid-column: 4;
   grid-area: lang;
 }
-
 .languages__list li {
   list-style: none;
 }
@@ -325,14 +242,9 @@ section {
   color: aliceblue;
   background: url(../assets/svg-png/noise_transparent.png), radial-gradient(85% 215.42% at 0% 0%, #972e2e 0%, #8c0e8c);
 }
-
 .footer__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .github {
@@ -352,7 +264,6 @@ section {
   bottom: 10px;
   border-radius: 50%;
 }
-
 .icon-logo-arr svg {
   margin: 5px 7px;
   width: 30px;
@@ -362,49 +273,39 @@ section {
 
 @media (max-width: 1150px) {
   .main__wrapp {
-    -ms-grid-columns: 2fr 2fr 3fr;
-        grid-template-columns: 2fr 2fr 3fr;
-        grid-template-areas: 'skil cont abo ' 'skil pro hob' 'skil edu lang';
+    grid-template-columns: 2fr 2fr 3fr;
+    grid-template-areas: "skil cont abo " "skil pro hob" "skil edu lang";
     gap: 0;
   }
   .skills {
     margin: 0;
   }
 }
-
 @media (max-width: 960px) {
   .main__wrapp {
-    -ms-grid-columns: (1fr)[5];
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-areas: 'cont cont abo abo abo' 'skil skil pro pro hob' 'skil skil edu edu lang';
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-areas: "cont cont abo abo abo" "skil skil pro pro hob" "skil skil edu edu lang";
   }
 }
-
 @media (max-width: 767.9px) {
   .burger {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     margin-left: auto;
   }
   .main__wrapp {
-    -ms-grid-columns: (1fr)[4];
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-areas: 'cont cont pro pro' 'skil skil abo abo' 'skil skil abo abo' 'skil hob edu  lang';
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas: "cont cont pro pro" "skil skil abo abo" "skil skil abo abo" "skil hob edu  lang";
   }
   .icon-logo-arr {
     display: block;
   }
 }
-
 @media (max-width: 640px) {
   .main__wrapp {
-    -ms-grid-columns: (1fr)[4];
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-areas: 'abo abo abo abo' 'skil skil cont cont' 'skil skil edu edu' 'skil skil lang lang' 'pro pro hob hob';
+    grid-template-columns: repeat 4, 1fr;
+    grid-template-areas: "abo abo abo abo" "skil skil cont cont" "skil skil edu edu" "skil skil lang lang" "pro pro hob hob";
   }
 }
-
 @media (max-width: 560px) {
   .my__name {
     font-size: 1.7rem;
@@ -413,13 +314,8 @@ section {
     font-size: 1.3rem;
   }
   .main__wrapp {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .title {
     font-size: 1.3rem;
@@ -429,16 +325,10 @@ section {
     text-align: center;
   }
 }
-
 @media (max-width: 460px) {
   .my {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
   .my__photo {
     margin-right: 50px;
@@ -469,13 +359,10 @@ section {
     height: 30px;
   }
 }
-
 .show-nav {
-  -webkit-transform: translate(0);
-          transform: translate(0);
+  transform: translate(0);
 }
 
 .burger-rot {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
+  transform: rotate(360deg);
 }
