--- a/styles/style.css
+++ b/styles/style.css
@@ -17,8 +17,8 @@ body {
 }
 
 .header {
-  background: url(../assets/svg-png/noise_transparent.png), radial-gradient(85% 215.42% at 0% 0%, #a36666 0%, #4a5d93);
-  color: aliceblue;
+  background: radial-gradient(85% 215.42% at 0% 0%, #614040 0%, #4a5d93);
+  color: rgb(186, 178, 99);
   width: 100%;
 }
 
@@ -73,7 +73,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 50%;
-  background-color: rgb(82, 26, 85);
+  background-color: #4a5d93;
   padding-top: 20px;
 }
 .nav__links li {
@@ -254,8 +254,9 @@ section {
 .footer {
   position: relative;
   margin-top: auto;
-  color: aliceblue;
-  background: url(../assets/svg-png/noise_transparent.png), radial-gradient(85% 215.42% at 0% 0%, #972e2e 0%, #8c0e8c);
+  background: radial-gradient(85% 215.42% at 0% 0%, #614040 0%, #4a5d93);
+  color: rgb(186, 178, 99);
+  width: 100%;
 }
 .footer__content {
   display: flex;
@@ -265,7 +266,7 @@ section {
 .github {
   text-decoration: none;
   font-size: 1.3rem;
-  color: aliceblue;
+  color: rgb(186, 178, 99);
   margin-left: 20px;
 }
 
@@ -374,10 +375,35 @@ section {
     height: 30px;
   }
 }
+.bloor {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.show {
+  position: relative;
+  z-index: 20;
+  transform: translate(0);
+  background-color: rgba(255, 255, 255, 0.437);
+}
+
 .show-nav {
   transform: translate(0);
 }
 
+.show-ul {
+  position: relative;
+  z-index: 200;
+}
+
 .burger-rot {
   transform: rotate(360deg);
+}
+
+.hidden {
+  overflow: hidden;
+  padding-right: 17px;
 }
