Add freelance project

--- a/styles/style.css
+++ b/styles/style.css
@@ -189,6 +189,14 @@ section {
 .projects {
   grid-area: pro;
 }
+.projects__title__little {
+  margin-bottom: 10px;
+  margin-left: 40px;
+}
+.projects__training {
+  margin-left: 40px;
+}
+
 .project-li {
   list-style: none;
   margin-bottom: 10px;
@@ -196,6 +204,12 @@ section {
 .project-li a {
   text-decoration: none;
   color: rgb(114, 114, 114);
+}
+
+.project-link {
+  text-decoration: none;
+  color: rgb(114, 114, 114);
+  margin-bottom: 10px;
 }
 
 .project-li-text {
